@@ -1,3 +1,8 @@
+2004-02-17  Atsushi Enomoto <atsushi@ximian.com>
+
+	* LocationPathPattern.cs : Optimized Matches(). For non-positional
+	  patterns, it never iterates predicate, just evaluate boolean.
+
 2004-02-16  Atsushi Enomoto <atsushi@ximian.com>
 
 	* DTMXPathDocument.cs,
